--- a/portal/px-nissa/salespurchase/23-24/sa23-24.html
+++ b/portal/px-nissa/salespurchase/23-24/sa23-24.html
@@ -161,122 +161,122 @@
     <table id="dataTable">
         <thead>
             <tr>
-<th>Select</th>
-<th>Month</th>
-<th>Bazaar</th>
-<th>RO</th>
-<th>OEM</th>
-<th>Fleet</th>
-<th>Others</th>
-<th>Defense</th>
-<th>Total</th>
-
-
+                <th><input type="checkbox" id="selectAll"></th> <!-- Select All Checkbox -->
+                <th>Month</th>
+                <th>Bazaar</th>
+                <th>RO</th>
+                <th>OEM</th>
+                <th>Fleet</th>
+                <th>Others</th>
+                <th>Defense</th>
+                <th>Total</th>
             </tr>
         </thead>
         <tbody>
-           
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>April</td><td>6783.8</td><td>2639</td><td>3782</td><td>0</td><td>0</td><td>0</td><td>13204.8</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>May</td><td>7736.6</td><td>10705.5</td><td>3322.4</td><td>0</td><td>337.5</td><td>0</td><td>22102</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>June</td><td>7769.5</td><td>9599</td><td>5066.2</td><td>0</td><td>0</td><td>0</td><td>22434.7</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>July</td><td>6554.9</td><td>8308.5</td><td>3696.4</td><td>630</td><td>116</td><td>330</td><td>19635.8</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>August</td><td>5480.4</td><td>9147</td><td>4311</td><td>0</td><td>0</td><td>0</td><td>18938.4</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>September</td><td>3885.5</td><td>13589</td><td>2694</td><td>0</td><td>0</td><td>0</td><td>20168.5</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>October</td><td>3921.8</td><td>7813</td><td>4201.6</td><td>0</td><td>300</td><td>100</td><td>16336.4</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>November</td><td>10172.4</td><td>16344</td><td>3498</td><td>0</td><td>0</td><td>0</td><td>30014.4</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>December</td><td>7036.9</td><td>13922</td><td>4374</td><td>0</td><td>0</td><td>0</td><td>25332.9</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>January</td><td>7555</td><td>8422</td><td>2958</td><td>420</td><td>15</td><td>0</td><td>19370</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>February</td><td>10489.8</td><td>15694</td><td>5424.8</td><td>0</td><td>0</td><td>0</td><td>31608.6</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>March</td><td>12596</td><td>32862.5</td><td>5522</td><td>0</td><td>665</td><td>0</td><td>51645.5</td></tr>
-
-
-
-
-
-
-
-
+            <tr><td><input type="checkbox" class="rowCheckbox"></td><td>April</td><td>6783.8</td><td>2639</td><td>3782</td><td>0</td><td>0</td><td>0</td><td>13204.8</td></tr>
+            <tr><td><input type="checkbox" class="rowCheckbox"></td><td>May</td><td>7736.6</td><td>10705.5</td><td>3322.4</td><td>0</td><td>337.5</td><td>0</td><td>22102</td></tr>
+            <tr><td><input type="checkbox" class="rowCheckbox"></td><td>June</td><td>7769.5</td><td>9599</td><td>5066.2</td><td>0</td><td>0</td><td>0</td><td>22434.7</td></tr>
+            <tr><td><input type="checkbox" class="rowCheckbox"></td><td>July</td><td>6554.9</td><td>8308.5</td><td>3696.4</td><td>630</td><td>116</td><td>330</td><td>19635.8</td></tr>
+            <tr><td><input type="checkbox" class="rowCheckbox"></td><td>August</td><td>5480.4</td><td>9147</td><td>4311</td><td>0</td><td>0</td><td>0</td><td>18938.4</td></tr>
+            <tr><td><input type="checkbox" class="rowCheckbox"></td><td>September</td><td>3885.5</td><td>13589</td><td>2694</td><td>0</td><td>0</td><td>0</td><td>20168.5</td></tr>
+            <tr><td><input type="checkbox" class="rowCheckbox"></td><td>October</td><td>3921.8</td><td>7813</td><td>4201.6</td><td>0</td><td>300</td><td>100</td><td>16336.4</td></tr>
+            <tr><td><input type="checkbox" class="rowCheckbox"></td><td>November</td><td>10172.4</td><td>16344</td><td>3498</td><td>0</td><td>0</td><td>0</td><td>30014.4</td></tr>
+            <tr><td><input type="checkbox" class="rowCheckbox"></td><td>December</td><td>7036.9</td><td>13922</td><td>4374</td><td>0</td><td>0</td><td>0</td><td>25332.9</td></tr>
+            <tr><td><input type="checkbox" class="rowCheckbox"></td><td>January</td><td>7555</td><td>8422</td><td>2958</td><td>420</td><td>15</td><td>0</td><td>19370</td></tr>
+            <tr><td><input type="checkbox" class="rowCheckbox"></td><td>February</td><td>10489.8</td><td>15694</td><td>5424.8</td><td>0</td><td>0</td><td>0</td><td>31608.6</td></tr>
+            <tr><td><input type="checkbox" class="rowCheckbox"></td><td>March</td><td>12596</td><td>32862.5</td><td>5522</td><td>0</td><td>665</td><td>0</td><td>51645.5</td></tr>
             <tr class="subtotal">
-    <td colspan="2">SubTotal</td>
-    <td id="subtotalBazaar">0</td> <!-- Subtotal for Target -->
-    <td id="subtotalRO">0</td> <!-- Subtotal for Base -->
-    <td id="subtotalOEM">0</td> <!-- Subtotal for Sales 23-24 -->
-    <td id="subtotalFleet">0</td> <!-- Subtotal for Primary 23-24 -->
-	<td id="subtotalOthers">0</td> <!-- Subtotal for Primary 23-24 -->
-	<td id="subtotalDefense">0</td> <!-- Subtotal for Primary 23-24 -->
-	<td id="subtotalTotal">0</td> <!-- Subtotal for Primary 23-24 -->
-</tr>
+                <td colspan="2">SubTotal</td>
+                <td id="subtotalBazaar">0</td>
+                <td id="subtotalRO">0</td>
+                <td id="subtotalOEM">0</td>
+                <td id="subtotalFleet">0</td>
+                <td id="subtotalOthers">0</td>
+                <td id="subtotalDefense">0</td>
+                <td id="subtotalTotal">0</td>
+            </tr>
         </tbody>
     </table>
 </div>
 
 <script>
- function filterTable() {
-    const searchBox = document.getElementById('searchBox');
-    const filter = searchBox.value.toUpperCase();
-    const table = document.getElementById('dataTable');
-    const rows = table.getElementsByTagName('tr');
-    let subtotalBazaar = 0;
-    let subtotalRO = 0;
-    let subtotalOEM = 0;
-    let subtotalFleet = 0;
-	let subtotalOthers = 0;
-	let subtotalDefense = 0;
-	let subtotalTotal = 0;
+    // Function to filter the table and calculate subtotals
+    function filterTable() {
+        const searchBox = document.getElementById('searchBox');
+        const filter = searchBox.value.toUpperCase();
+        const table = document.getElementById('dataTable');
+        const rows = table.getElementsByTagName('tr');
+        let subtotalBazaar = 0;
+        let subtotalRO = 0;
+        let subtotalOEM = 0;
+        let subtotalFleet = 0;
+        let subtotalOthers = 0;
+        let subtotalDefense = 0;
+        let subtotalTotal = 0;
 
-    // Loop through all table rows (except the header and subtotal row)
-    for (let i = 1; i < rows.length - 1; i++) {
-        const cellA = rows[i].getElementsByTagName('td')[1]; // Column A (Month)
-        const cellB = rows[i].getElementsByTagName('td')[2]; // Column B (Target)
-        const cellC = rows[i].getElementsByTagName('td')[3]; // Column C (Base)
-        const cellD = rows[i].getElementsByTagName('td')[4]; // Column D (Sales 23-24)
-        const cellE = rows[i].getElementsByTagName('td')[5]; // Column E (Primary 23-24)
-	    const cellF = rows[i].getElementsByTagName('td')[6]; // Column F (Primary 23-24)
-		const cellG = rows[i].getElementsByTagName('td')[7]; // Column G (Primary 23-24)
-		const cellH = rows[i].getElementsByTagName('td')[8]; // Column G (Primary 23-24)
-        const checkbox = rows[i].querySelector('.rowCheckbox'); // Checkbox
+        // Loop through all table rows (except the header and subtotal row)
+        for (let i = 1; i < rows.length - 1; i++) {
+            const cellA = rows[i].getElementsByTagName('td')[1]; // Column A (Month)
+            const cellB = rows[i].getElementsByTagName('td')[2]; // Column B (Bazaar)
+            const cellC = rows[i].getElementsByTagName('td')[3]; // Column C (RO)
+            const cellD = rows[i].getElementsByTagName('td')[4]; // Column D (OEM)
+            const cellE = rows[i].getElementsByTagName('td')[5]; // Column E (Fleet)
+            const cellF = rows[i].getElementsByTagName('td')[6]; // Column F (Others)
+            const cellG = rows[i].getElementsByTagName('td')[7]; // Column G (Defense)
+            const cellH = rows[i].getElementsByTagName('td')[8]; // Column H (Total)
+            const checkbox = rows[i].querySelector('.rowCheckbox'); // Checkbox
 
-        if (cellA && cellB && cellC && cellD && cellE && cellF && cellG && cellH) {
-            const textValue = cellA.textContent || cellA.innerText;
-            if (textValue.toUpperCase().indexOf(filter) > -1) {
-                rows[i].style.display = ''; // Show the row
-                if (checkbox.checked) {
-                    subtotalBazaar += parseFloat(cellB.textContent || cellB.innerText) || 0; // Add to subtotal for Target
-                    subtotalRO += parseFloat(cellC.textContent || cellC.innerText) || 0; // Add to subtotal for Base
-                    subtotalOEM += parseFloat(cellD.textContent || cellD.innerText) || 0; // Add to subtotal for Sales
-                    subtotalFleet += parseFloat(cellE.textContent || cellE.innerText) || 0; // Add to subtotal for Primary
-					subtotalOthers += parseFloat(cellF.textContent || cellF.innerText) || 0; // Add to subtotal for Primary
-					subtotalDefense += parseFloat(cellG.textContent || cellG.innerText) || 0; // Add to subtotal for Primary
-				    subtotalTotal += parseFloat(cellH.textContent || cellH.innerText) || 0; // Add to subtotal for Primary
+            if (cellA && cellB && cellC && cellD && cellE && cellF && cellG && cellH) {
+                const textValue = cellA.textContent || cellA.innerText;
+                if (textValue.toUpperCase().indexOf(filter) > -1) {
+                    rows[i].style.display = ''; // Show the row
+                    if (checkbox.checked) {
+                        subtotalBazaar += parseFloat(cellB.textContent || cellB.innerText) || 0;
+                        subtotalRO += parseFloat(cellC.textContent || cellC.innerText) || 0;
+                        subtotalOEM += parseFloat(cellD.textContent || cellD.innerText) || 0;
+                        subtotalFleet += parseFloat(cellE.textContent || cellE.innerText) || 0;
+                        subtotalOthers += parseFloat(cellF.textContent || cellF.innerText) || 0;
+                        subtotalDefense += parseFloat(cellG.textContent || cellG.innerText) || 0;
+                        subtotalTotal += parseFloat(cellH.textContent || cellH.innerText) || 0;
+                    }
+                } else {
+                    rows[i].style.display = 'none'; // Hide the row
                 }
-            } else {
-                rows[i].style.display = 'none'; // Hide the row
             }
         }
+
+        // Update the subtotal values
+        document.getElementById('subtotalBazaar').textContent = subtotalBazaar.toFixed(2);
+        document.getElementById('subtotalRO').textContent = subtotalRO.toFixed(2);
+        document.getElementById('subtotalOEM').textContent = subtotalOEM.toFixed(2);
+        document.getElementById('subtotalFleet').textContent = subtotalFleet.toFixed(2);
+        document.getElementById('subtotalOthers').textContent = subtotalOthers.toFixed(2);
+        document.getElementById('subtotalDefense').textContent = subtotalDefense.toFixed(2);
+        document.getElementById('subtotalTotal').textContent = subtotalTotal.toFixed(2);
     }
 
-    // Update the subtotal values
-    document.getElementById('subtotalBazaar').textContent = subtotalBazaar.toFixed(2);
-    document.getElementById('subtotalRO').textContent = subtotalRO.toFixed(2);
-    document.getElementById('subtotalOEM').textContent = subtotalOEM.toFixed(2);
-    document.getElementById('subtotalFleet').textContent = subtotalFleet.toFixed(2);
-	document.getElementById('subtotalOthers').textContent = subtotalOthers.toFixed(2);
-	document.getElementById('subtotalDefense').textContent = subtotalDefense.toFixed(2);
-	document.getElementById('subtotalTotal').textContent = subtotalTotal.toFixed(2);
-}
+    // Function to handle "Select All" checkbox
+    function handleSelectAll() {
+        const selectAllCheckbox = document.getElementById('selectAll');
+        const rowCheckboxes = document.querySelectorAll('.rowCheckbox');
 
-    // Function to handle checkbox clicks
-    function handleCheckboxClick() {
-        filterTable(); // Recalculate subtotal when a checkbox is clicked
+        // Loop through all row checkboxes and set their checked state to match the "Select All" checkbox
+        rowCheckboxes.forEach(checkbox => {
+            checkbox.checked = selectAllCheckbox.checked;
+        });
+
+        // Recalculate subtotals after selecting/deselecting all rows
+        filterTable();
     }
 
     // Add event listeners
     document.getElementById('searchBox').addEventListener('input', filterTable);
+    document.getElementById('selectAll').addEventListener('click', handleSelectAll);
 
-    // Add event listeners to all checkboxes
+    // Add event listeners to all row checkboxes
     const checkboxes = document.querySelectorAll('.rowCheckbox');
     checkboxes.forEach(checkbox => {
-        checkbox.addEventListener('click', handleCheckboxClick);
+        checkbox.addEventListener('click', filterTable);
     });
 
     // Initial calculation
