--- a/portal/px-nissa/salespurchase/23-24/sp23-24.html
+++ b/portal/px-nissa/salespurchase/23-24/sp23-24.html
@@ -162,7 +162,7 @@
     <table id="dataTable">
         <thead>
             <tr>
-                <th>Select</th>
+                <th><input type="checkbox" id="selectAll"></th>
                 <th>Month</th>
                 <th>Sales 23-24</th>
                 <th>Primary 23-24</th>
@@ -194,6 +194,23 @@
 </div>
 
 <script>
+
+// Function to handle "Select All" checkbox
+function handleSelectAll() {
+    const selectAllCheckbox = document.getElementById('selectAll');
+    const rowCheckboxes = document.querySelectorAll('.rowCheckbox');
+
+    // Loop through all row checkboxes and set their checked state to match the "Select All" checkbox
+    rowCheckboxes.forEach(checkbox => {
+        checkbox.checked = selectAllCheckbox.checked;
+    });
+
+    // Recalculate subtotals after selecting/deselecting all rows
+    filterTable();
+}
+
+// Add event listener to the "Select All" checkbox
+document.getElementById('selectAll').addEventListener('click', handleSelectAll);
     // Function to filter the table rows and calculate the subtotal
     function filterTable() {
         const searchBox = document.getElementById('searchBox');
