--- a/portal/outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/outstsheet/RoOutstsheet.html
+++ b/portal/outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/outstsheet/RoOutstsheet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RO Sales Data</title>
+    <title>RO Outstanding Sheet</title>
     <style>
         /* Table container with fixed height and scrolling */
         .table-container {
@@ -78,7 +78,7 @@
 </head>
 <body>
 
-<h2>Customer Sales Data</h2>
+<h2>RO Outstanding Sheet</h2>
 
 <!-- Home and Facebook Buttons -->
 <button onclick="window.location.href='https://servodata5.github.io/nissa/portal/portal.html'">Home</button>
@@ -99,6 +99,8 @@
 <button onclick="undoLastAction()">Undo</button>
 <button onclick="printTable()">Print</button>
 <button onclick="exportToExcel()">Export to Excel</button>
+<button onclick="saveToGitHub()">Save Data</button>
+<button onclick="loadFromGitHub()">Load Data</button>
 <input type="file" id="excelFileInput" style="width: 310px; accept=".xlsx" onchange="handleFileUpload(this)">
 
 <!-- Table Container -->
@@ -408,7 +410,7 @@
 
     // Function to load Excel data from a file
     function loadExcelDataFromFile() {
-        fetch('Customer_Sales_Data.xlsx')
+        fetch('RO_outstanding_sheet.xlsx')
             .then(response => response.arrayBuffer())
             .then(data => {
                 const workbook = XLSX.read(data, { type: 'array' });
@@ -469,17 +471,14 @@
         data.push(headers);
 
         // Add table rows
-         rows.forEach((row, rowIndex) => {
-        // Skip the header row (rowIndex === 0)
-        if (rowIndex === 0) return;
-
-        const rowData = [];
-        row.querySelectorAll('td').forEach(cell => {
-            const input = cell.querySelector('input');
-            rowData.push(input ? input.value : cell.textContent);
+        rows.forEach(row => {
+            const rowData = [];
+            row.querySelectorAll('td').forEach(cell => {
+                const input = cell.querySelector('input');
+                rowData.push(input ? input.value : cell.textContent);
+            });
+            data.push(rowData);
         });
-        data.push(rowData);
-    });
 
         // Create a worksheet
         const ws = XLSX.utils.aoa_to_sheet(data);
@@ -489,7 +488,7 @@
         XLSX.utils.book_append_sheet(wb, ws, 'Customer Data');
 
         // Save the Excel file
-        XLSX.writeFile(wb, 'Customer_Sales_Data.xlsx');
+        XLSX.writeFile(wb, 'RO_outstanding_sheet.xlsx');
     }
 
     // Function to search customers by name
@@ -508,19 +507,362 @@
         });
     }
 
+    // Function to save data to GitHub
+    async function saveToGitHub() {
+        const table = document.getElementById('customerTable');
+        const rows = table.querySelectorAll('tr');
+        const data = [];
+
+        // Add table headers
+        const headers = [];
+        table.querySelectorAll('th').forEach(header => {
+            headers.push(header.textContent);
+        });
+        data.push(headers);
+
+        // Add table rows
+        rows.forEach(row => {
+            const rowData = [];
+            row.querySelectorAll('td').forEach(cell => {
+                const input = cell.querySelector('input');
+                rowData.push(input ? input.value : cell.textContent);
+            });
+            data.push(rowData);
+        });
+
+        // Convert data to CSV format
+        const csvContent = data.map(row => row.join(',')).join('\n');
+
+        // GitHub API details
+        const owner = 'servodata5'; // Replace with your GitHub username
+        const repo = 'nissa'; // Replace with your repository name
+        const path = 'portal/outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/RO_outstanding_sheet.csv'; // Path to the file in the repository
+        const token = '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'; // Replace with your GitHub PAT
+
+        // Get the current SHA of the file (if it exists)
+        let sha = null;
+        try {
+            const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${path}`, {
+                headers: {
+                    Authorization: `Bearer ${token}`,
+                },
+            });
+            const fileData = await response.json();
+            sha = fileData.sha;
+        } catch (error) {
+            console.log('File does not exist, creating a new one.');
+        }
+
+        // Upload the file to GitHub
+        const uploadResponse = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${path}`, {
+            method: 'PUT',
+            headers: {
+                Authorization: `Bearer ${token}`,
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({
+                message: 'Update Customer Sales Data',
+                content: btoa(csvContent), // Encode content in Base64
+                sha: sha, // Include SHA if updating an existing file
+            }),
+        });
+
+        if (uploadResponse.ok) {
+            alert('Data saved successfully!');
+        } else {
+            alert('Failed to save data.');
+        }
+    }
+
+    // Function to load data from GitHub
+    async function loadFromGitHub() {
+        const owner = 'servodata5'; // Replace with your GitHub username
+        const repo = 'nissa'; // Replace with your repository name
+        const path = 'portal/outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/RO_outstanding_sheet.csv'; // Path to the file in the repository
+        const token = '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'; // Replace with your GitHub PAT
+
+        try {
+            // Fetch the file content from GitHub
+            const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${path}`, {
+                headers: {
+                    Authorization: `Bearer ${token}`,
+                },
+            });
+            const fileData = await response.json();
+
+            // Decode the Base64 content
+            const csvContent = atob(fileData.content);
+
+            // Convert CSV content to JSON
+            const rows = csvContent.split('\n').map(row => row.split(','));
+
+            // Clear existing table data
+            const tableBody = document.getElementById('customerTableBody');
+            tableBody.innerHTML = '';
+
+            // Populate the table with the loaded data
+            rows.slice(1).forEach((row, index) => {
+                const newRow = document.createElement('tr');
+                newRow.innerHTML = `
+                    <td>${index + 1}</td>
+                    <td><input type="text" class="customer-name" value="${row[1]}" oninput="saveCustomers()" maxlength="30"></td>
+                    <td><input type="number" class="last-year value-input" oninput="handleInputChange(this)" value="${row[2] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[3] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[4] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[5] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[6] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[7] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[8] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[9] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[10] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[11] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[12] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[13] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[14] || 0}"></td>
+                    <td class="total">${row[15] || 0}</td>
+                    <td><button onclick="removeCustomer(this)">Remove</button></td>
+                `;
+                tableBody.appendChild(newRow);
+            });
+
+            // Save the loaded data to localStorage
+            saveCustomers();
+
+            alert('Data loaded successfully!');
+        } catch (error) {
+            alert('Failed to load data.');
+            console.error(error);
+        }
+    }
+
     // Load saved data from localStorage when the page loads
     document.addEventListener('DOMContentLoaded', () => {
         loadSavedCustomers();
         updateReportBox(); // Initialize the report box
     });
 	
-	function handleFileUpload(input) {
-    const file = input.files[0];
-    if (file) {
-        loadExcelData(file);
+	// new load
+	function saveCustomers() {
+    const tableBody = document.getElementById('customerTableBody');
+    const rows = tableBody.querySelectorAll('tr');
+    const customers = [];
+
+    // Loop through each row and save its data
+    rows.forEach((row, index) => {
+        const customerName = row.querySelector('.customer-name').value.trim();
+        const lastYear = row.querySelector('.last-year').value.trim();
+        const months = Array.from(row.querySelectorAll('.month')).map(input => input.value.trim());
+        const total = row.querySelector('.total').textContent.trim();
+
+        // Skip saving if all fields are empty
+        if (customerName || lastYear || months.some(month => month) || total) {
+            const customer = {
+                slNo: index + 1, // Ensure serial numbers are sequential
+                name: customerName,
+                lastYear: lastYear,
+                months: months,
+                total: total,
+            };
+            customers.push(customer);
+        }
+    });
+
+    // Save the data to localStorage
+    localStorage.setItem('customers', JSON.stringify(customers));
+}
+	
+	
+	function exportToExcel() {
+    const table = document.getElementById('customerTable');
+    const rows = table.querySelectorAll('tr');
+    const data = [];
+
+    // Add table headers
+    const headers = [];
+    table.querySelectorAll('th').forEach(header => {
+        headers.push(header.textContent);
+    });
+    data.push(headers);
+
+    // Add table rows
+    rows.forEach(row => {
+        const rowData = [];
+        let isEmptyRow = true; // Assume the row is empty initially
+
+        row.querySelectorAll('td').forEach((cell, cellIndex) => {
+            const input = cell.querySelector('input');
+            const value = input ? input.value.trim() : cell.textContent.trim();
+            rowData.push(value);
+
+            // Check if the cell is not empty (ignore serial number and action button columns)
+            if (cellIndex !== 0 && cellIndex !== row.children.length - 1 && value) {
+                isEmptyRow = false;
+            }
+        });
+
+        // Only add the row to the data if it's not empty
+        if (!isEmptyRow) {
+            data.push(rowData);
+        }
+    });
+
+    // Create a worksheet
+    const ws = XLSX.utils.aoa_to_sheet(data);
+
+    // Create a workbook
+    const wb = XLSX.utils.book_new();
+    XLSX.utils.book_append_sheet(wb, ws, 'Customer Data');
+
+    // Save the Excel file
+    XLSX.writeFile(wb, 'RO_outstanding_sheet.xlsx');
+}
+
+
+async function saveToGitHub() {
+    const table = document.getElementById('customerTable');
+    const rows = table.querySelectorAll('tr');
+    const data = [];
+
+    // Add table headers
+    const headers = [];
+    table.querySelectorAll('th').forEach(header => {
+        headers.push(header.textContent);
+    });
+    data.push(headers);
+
+    // Add table rows
+    rows.forEach(row => {
+        const rowData = [];
+        let isEmptyRow = true; // Assume the row is empty initially
+
+        row.querySelectorAll('td').forEach((cell, cellIndex) => {
+            const input = cell.querySelector('input');
+            const value = input ? input.value.trim() : cell.textContent.trim();
+            rowData.push(value);
+
+            // Check if the cell is not empty (ignore serial number and action button columns)
+            if (cellIndex !== 0 && cellIndex !== row.children.length - 1 && value) {
+                isEmptyRow = false;
+            }
+        });
+
+        // Only add the row to the data if it's not empty
+        if (!isEmptyRow) {
+            data.push(rowData);
+        }
+    });
+
+    // Convert data to CSV format
+    const csvContent = data.map(row => row.join(',')).join('\n');
+
+    // GitHub API details
+    const owner = 'servodata5'; // Replace with your GitHub username
+    const repo = 'nissa'; // Replace with your repository name
+    const path = 'portal/outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/RO_outstanding_sheet.csv'; // Path to the file in the repository
+    const token = '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'; // Replace with your GitHub PAT
+
+    // Get the current SHA of the file (if it exists)
+    let sha = null;
+    try {
+        const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${path}`, {
+            headers: {
+                Authorization: `Bearer ${token}`,
+            },
+        });
+        const fileData = await response.json();
+        sha = fileData.sha;
+    } catch (error) {
+        console.log('File does not exist, creating a new one.');
+    }
+
+    // Upload the file to GitHub
+    const uploadResponse = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${path}`, {
+        method: 'PUT',
+        headers: {
+            Authorization: `Bearer ${token}`,
+            'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({
+            message: 'Update Customer Sales Data',
+            content: btoa(csvContent), // Encode content in Base64
+            sha: sha, // Include SHA if updating an existing file
+        }),
+    });
+
+    if (uploadResponse.ok) {
+        alert('Data saved successfully!');
+    } else {
+        alert('Failed to save data.');
     }
 }
+	
+	// Function to handle file upload and load data from Excel
+function handleFileUpload(input) {
+    const file = input.files[0]; // Get the selected file
+    if (!file) {
+        alert("No file selected. Please choose a file.");
+        return; // Exit if no file is selected
+    }
+
+    const reader = new FileReader();
+    reader.onload = function (e) {
+        try {
+            const data = new Uint8Array(e.target.result); // Convert file data to Uint8Array
+            const workbook = XLSX.read(data, { type: 'array' }); // Read the Excel file
+            const sheetName = workbook.SheetNames[0]; // Get the first sheet
+            const worksheet = workbook.Sheets[sheetName]; // Get the worksheet
+            const json = XLSX.utils.sheet_to_json(worksheet, { header: 1 }); // Convert sheet to JSON
+
+            // Clear existing table data
+            const tableBody = document.getElementById('customerTableBody');
+            tableBody.innerHTML = '';
+
+            // Populate the table with Excel data
+            json.slice(1).forEach((row, index) => {
+                const newRow = document.createElement('tr');
+                newRow.innerHTML = `
+                    <td>${index + 1}</td>
+                    <td><input type="text" class="customer-name" value="${row[1] || ''}" oninput="saveCustomers()" maxlength="30"></td>
+                    <td><input type="number" class="last-year value-input" oninput="handleInputChange(this)" value="${row[2] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[3] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[4] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[5] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[6] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[7] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[8] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[9] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[10] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[11] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[12] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[13] || 0}"></td>
+                    <td><input type="number" class="month value-input" oninput="handleInputChange(this)" value="${row[14] || 0}"></td>
+                    <td class="total">${row[15] || 0}</td>
+                    <td><button onclick="removeCustomer(this)">Remove</button></td>
+                `;
+                tableBody.appendChild(newRow);
+            });
+
+            // Save the loaded data to localStorage
+            saveCustomers();
+            alert("Data loaded successfully from the file!");
+        } catch (error) {
+            console.error("Error loading file:", error);
+            alert("Failed to load the file. Please ensure it is a valid Excel file.");
+        }
+    };
+
+    reader.onerror = function (error) {
+        console.error("FileReader error:", error);
+        alert("An error occurred while reading the file. Please try again.");
+    };
+
+    reader.readAsArrayBuffer(file); // Read the file as an array buffer
+}
+	
+	
+	
 </script>
 
 </body>
 </html>
+
