--- a/portal/ledindex.html
+++ b/portal/ledindex.html
@@ -53,7 +53,8 @@
         </div>
         <ul id="menuList">
 
-        
+        <li><a href="outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/outstsheet/RoOutstsheet.html">Outstanding Sheet</a></li>
+		
 		<li><a href="roled.html">R/O</a></li>
 
 		<li><a href="oemled.html">OEM</a></li>
