--- a/portal/ledindex.html
+++ b/portal/ledindex.html
@@ -53,7 +53,7 @@
         </div>
         <ul id="menuList">
 
-        <li><a href="outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/Ro-outstanding_sheet.html">Outstanding Sheet</a></li>
+        <li><a href="https://managementproject94.blogspot.com/p/outstanding-sheet.html">Outstanding Sheet</a></li>
 		
 		<li><a href="roled.html">R/O</a></li>
 
