--- a/portal/portal.html
+++ b/portal/portal.html
@@ -52,6 +52,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="spo.html">Order</a></li>
+			<li><a href="https://managementproject94.blogspot.com/p/invoice-tracking.html">Inv Track</a></li>
             <li><a href="ledlog.html">Ledgers<i class="fas fa-caret-right"></i></a></li>
 		
 			   <li><a href="px-nissa\px-nissa-dt.html">More<i class="fas fa-caret-right"></i></a></li>
