--- a/portal/px-nissa/salespurchase/24-25/sa24-25.html
+++ b/portal/px-nissa/salespurchase/24-25/sa24-25.html
@@ -187,7 +187,7 @@
 <tr><td><input type="checkbox" class="rowCheckbox"></td><td>December</td><td>9282.1</td><td>16199.5</td><td>4016.8</td><td>0</td><td>0</td><td>29498.4</td></tr>
 <tr><td><input type="checkbox" class="rowCheckbox"></td><td>January</td><td>10634.3</td><td>13557</td><td>2896</td><td>0</td><td>0</td><td>27087.3</td></tr>
 <tr><td><input type="checkbox" class="rowCheckbox"></td><td>February</td><td>10001.1</td><td>22740</td><td>2036</td><td>0</td><td>0</td><td>34777.1</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>March</td><td></td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>March</td><td>5215.8</td><td>59378.5</td><td>2926.2</td><td>0</td><td>0</td><td>0</td></tr>
 
 
 
