--- a/portal/px-nissa/salespurchase/24-25/sp24-25.html
+++ b/portal/px-nissa/salespurchase/24-25/sp24-25.html
@@ -182,7 +182,9 @@
 <tr><td><input type="checkbox" class="rowCheckbox"></td><td>December</td><td>35000</td><td>24</td><td>29498.4</td><td>29840.5</td></tr>
 <tr><td><input type="checkbox" class="rowCheckbox"></td><td>January</td><td>25000</td><td>22.5</td><td>26457.3</td><td>25250.5</td></tr>
 <tr><td><input type="checkbox" class="rowCheckbox"></td><td>February</td><td>29500</td><td>31</td><td>34777.1</td><td>30954.5</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>March</td><td>49000</td><td>48</td><td></td><td></td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>March</td><td>49000</td><td>48</td><td>63920.5</td><td>60154.5</td></tr>
+
+
 
 
 
